# quse

./: README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
quse/: __init__.py  _shared.py  claude_quota.py  cli.py  codex_quota.py  copilot_quota.py  usage.py  zai_quota.py
tests/: test_cli.py  test_codex_quota.py  test_quota_parsers.py  test_style_contract.py
